# lambda-hat

./: .gitignore  LICENSE  Makefile  README.md  dune-project  lambda-hat.opam
examples/: examples.mu
src/: dune  evaluation.ml  identifier.ml  lambda_hat.ml  parser.ml  signature_helpers.ml  substitution.ml  syntax.ml  syntax_constructors.ml  syntax_definition.ml  syntax_json.ml  syntax_pp.ml  typing.ml  validation.ml  variables.ml
test/: dune  test_lambda_hat.ml
